fix: navigation site name alignment

--- a/public/global.css
+++ b/public/global.css
@@ -50,6 +50,8 @@ body::before {
     font-size: 2rem;
     font-weight: 900;
     margin-left: 15px;
+    z-index: 11;
+    position: relative;
 
     user-select: none;
     -moz-user-select: none;
@@ -83,14 +85,6 @@ body::before {
 
 .navigation .title {
     height: 40px;
-}
-
-.navigation .title .site-name {
-    color: black;
-    font-size: 2rem;
-    font-weight: 900;
-    margin-left: 25px;
-    display: table;
 }
 
 .navigation .elements {
@@ -188,13 +182,13 @@ hr {
     width: 31px;
     height: 3px;
     background-color: #000;
-    transform-origin: left;
+    transform-origin: right;
 
-    transition: transform 0.5s ease, opacity 0.2s ease;
+    transition: transform 0.4s ease, opacity 0.2s ease;
 }
 
 .menu_btn .middle_line {
-    transition-delay: 0.3s;
+    transition-delay: 0.2s;
 }
 
 .menu_btn.open .middle_line {
@@ -203,9 +197,9 @@ hr {
 }
 
 .menu_btn.open .top_line {
-    transform: rotate(45deg);
+    transform: rotate(-45deg);
 }
 
 .menu_btn.open .bottom_line {
-    transform: rotate(-45deg);
+    transform: rotate(45deg);
 }
